--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Clorofill_app">
-        <activity android:name=".Cart"></activity>
+        <activity android:name=".MyOrders"></activity>
+        <activity android:name=".EditProfile" />
+        <activity android:name=".UserProfile" />
+        <activity android:name=".Cart" />
         <activity android:name=".ProductDetails" />
         <activity
             android:name=".homepage"
